--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@prisma/client": "^4.6.1",
     "framer-motion": "^6.5.1",
     "next": "^13.0.2",
     "next-auth": "^4.16.2",
@@ -26,6 +27,7 @@
     "eslint": "8.25.0",
     "eslint-config-next": "^13.0.2",
     "prettier": "2.7.1",
+    "prisma": "^4.6.1",
     "typescript": "4.8.4"
   }
 }
