--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@prisma/client": "^4.6.1",
+    "bcrypt": "^5.1.0",
     "framer-motion": "^6.5.1",
     "next": "^13.0.2",
     "next-auth": "^4.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
