--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "start:all": "concurrently --raw 'npm run start:db' 'npm run dev'",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:db": "docker-compose up db",
+    "stop:db": "docker-compose stop db"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.7",
@@ -27,8 +30,10 @@
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "concurrently": "^7.6.0",
     "eslint": "8.25.0",
     "eslint-config-next": "^13.0.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
     "prisma": "^4.6.1",
     "typescript": "4.8.4"
