--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.5",
     "@prisma/client": "^4.6.1",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.29.3",
     "framer-motion": "^6.5.1",
     "next": "^13.0.2",
     "next-auth": "^4.16.2",
