--- a/fly.toml
+++ b/fly.toml
@@ -15,7 +15,7 @@ processes = []
   NEXTAUTH_URL = "https://more-reps.fly.dev/"
 
 [deploy]
-  release_command = "npx prisma migrate deploy"
+  release_command = "sh scripts/release.sh"
 
 [experimental]
   allowed_public_ports = []
