--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "more-reps",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "scripts": {
     "dev": "concurrently --raw 'npm run start:db' 'next dev'",
     "build": "next build",
@@ -27,7 +30,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/node": "18.8.3",
+    "@types/node": "^18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "concurrently": "^7.6.0",
@@ -36,6 +39,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
     "prisma": "^4.6.1",
-    "typescript": "4.8.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
