--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "stop:db": "docker-compose stop"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.12",
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -26,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^1.3.0",
+    "uuid": "^9.0.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@types/node": "^18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^8.3.4",
     "concurrently": "^7.6.0",
     "eslint": "8.25.0",
     "eslint-config-next": "^13.0.2",
