--- a/fly.toml
+++ b/fly.toml
@@ -1,48 +1,48 @@
-# fly.toml file generated for more-reps on 2022-11-22T13:44:02+01:00
+# fly.toml app configuration file generated for more-reps on 2023-06-02T09:33:35+02:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
 app = "more-reps"
+primary_region = "fra"
 kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
+kill_timeout = "5s"
+
+[experimental]
+  auto_rollback = true
 
 [build]
   [build.args]
     NEXT_PUBLIC_EXAMPLE = "Value goes here"
 
-[env]
-  PORT = "8080"
-  DATABASE_PROVIDER = "postgresql"
-  NEXTAUTH_URL = "https://morereps.app/"
-
 [deploy]
   release_command = "sh scripts/release.sh"
 
-[experimental]
-  allowed_public_ports = []
-  auto_rollback = true
+[env]
+  DATABASE_PROVIDER = "postgresql"
+  NEXTAUTH_URL = "https://morereps.app/"
+  PORT = "8080"
 
 [[services]]
-  http_checks = []
+  protocol = "tcp"
   internal_port = 8080
   processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
   [services.concurrency]
+    type = "connections"
     hard_limit = 25
     soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
-    grace_period = "1s"
     interval = "15s"
-    restart_limit = 0
     timeout = "2s"
+    grace_period = "1s"
+    restart_limit = 0
