--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ prisma/*.db*
 
 # Sentry
 next.config.original.js
+
+# Auto-generated PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
