--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^6.5.1",
     "next": "^13.0.2",
     "next-auth": "^4.16.2",
+    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^1.3.0",
